<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="eg.gov.iti.tripplanner.TripDetailsActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginBottom="20dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/trip_details_background" />

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:alpha=".5"
                android:background="@android:color/black"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="15dp">

                <TextView
                    android:id="@+id/details_trip_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textColor="@android:color/white"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:text="11:53 am" />

                <TextView
                    android:id="@+id/details_trip_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    tools:text="25/3/2017" />

            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                style="@style/TripDetailsStyleColored"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/str_trip_name" />

            <TextView
                android:id="@+id/details_trip_name"
                style="@style/TripDetailsStyleWhite"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                tools:text="iTi Trip" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                style="@style/TripDetailsStyleColored"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/str_from" />

            <TextView
                android:id="@+id/details_trip_from"
                style="@style/TripDetailsStyleWhite"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                tools:text="Giza" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                style="@style/TripDetailsStyleColored"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/str_to" />

            <TextView
                android:id="@+id/details_trip_to"
                style="@style/TripDetailsStyleWhite"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                tools:text="iTi Trip" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                style="@style/TripDetailsStyleColored"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/str_notes" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/details_trip_notes"
                    style="@style/TripDetailsStyleWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="60dp"
                    tools:text="iTi Trip" />
            </ScrollView>
        </LinearLayout>

    </LinearLayout>
</ScrollView>