<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:elevation="12dp"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2.25"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/trip_image_view"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginRight="15dp"
                    android:padding="8dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/trip_name_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:textColor="#FFFFFF"
                        android:textSize="26sp"
                        android:textStyle="bold"
                        tools:text="iTi weekend trip" />

                    <TextView
                        android:id="@+id/trip_date_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        tools:text="24 August 2013" />

                    <TextView
                        android:id="@+id/trip_time_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp"
                        tools:text="10:49 am" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryLight"
                android:orientation="horizontal"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingLeft="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_from"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/trip_from_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        tools:text="Cairo" />
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorAccent" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingLeft="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_to"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/trip_to_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        tools:text="Alexandria" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#D3D3D3"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/delete_trip_image_view"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:padding="5dp"
                    android:src="@drawable/ic_delete_forever_white_48dp" />

                <ImageView
                    android:id="@+id/edit_trip_image_view"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:padding="6dp"
                    android:src="@drawable/ic_border_color_white_48dp" />

                <RelativeLayout
                    android:id="@+id/start_trip_image_view"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="3"
                    android:background="@color/colorPrimary"
                    android:orientation="horizontal"
                    android:paddingLeft="20sp"
                    android:paddingRight="10sp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:fontFamily="cursive"
                        android:gravity="center_vertical"
                        android:text="@string/str_start_trip"
                        android:textColor="#FFFFFF"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/ic_near_me_white_48dp" />

                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>